--- a/src/components/KontaktFormular.astro
+++ b/src/components/KontaktFormular.astro
@@ -59,7 +59,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 74px;
+    padding-top: 40px;
 }
 
 .form {
@@ -194,6 +194,9 @@ input[type=radio] {
 }
 
 @media (max-width: 430px) {
+    form {
+    padding-top: 20px;
+}
 input, textarea {
 width: 344.5px;
 }
