--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -31,7 +31,7 @@ import Video from "../components/Video.astro";
 </section>
 <section class="video">
     <h2>“Mit arbejde er mit drive”</h2>
-    <div class="video">
+    <div class="videoen">
       <Video></Video>
     </div>
 </section>
@@ -78,10 +78,10 @@ import Video from "../components/Video.astro";
 		scrub: true,
 		trigger: ".citat",
 		start: "-300 start",
-		end: "700 center",
+		end: "600 center",
 		// markers: true,
 	},
-	opacity:0,
+	opacity:0.2,
 	duration:0.5,
 	}); 
 
@@ -93,7 +93,7 @@ import Video from "../components/Video.astro";
 		end: "1200 center",
 		// markers: true,
 	},
-	opacity:0,
+	opacity:0.2,
 	duration:0.5,
 	});  
 
@@ -105,7 +105,7 @@ import Video from "../components/Video.astro";
 		end: "1500 center",
 		// markers: true,
 	},
-	opacity:0,
+	opacity:0.2,
 	duration:0.5,
 	}); 
 
@@ -114,10 +114,10 @@ import Video from "../components/Video.astro";
 		scrub: true,
 		trigger: ".manden",
 		start: "200 start",
-		end: "1500 center",
-		// markers: true,
+		end: "1000 center",
+		 // markers: true,
 	},
-	opacity:0,
+	opacity:0.2,
 	duration:0.5,
 	}); 
 
@@ -132,27 +132,15 @@ import Video from "../components/Video.astro";
 	
 	gsap.registerPlugin(ScrollTrigger);
 	
-	gsap.from(".citat", {
+	gsap.from(".manden_bag", {
 	scrollTrigger: {
 		scrub: true,
 		trigger: ".citat",
 		start: "-300 start",
 		end: "800 center",
-		// markers: true,
+		 //markers: true,
 	},
-	opacity:0,
-	duration:0.5,
-	}); 
-
-  gsap.from(".manden_bag", {
-	scrollTrigger: {
-		scrub: true,
-		trigger: ".citat",
-		start: "-100 start",
-		end: "500 center",
-		// markers: true,
-	},
-	opacity:0,
+	opacity:0.2,
 	duration:0.5,
 	}); 
 
@@ -164,7 +152,7 @@ import Video from "../components/Video.astro";
 		end: "1200 center",
 		// markers: true,
 	},
-	opacity:0,
+	opacity:0.2,
 	duration:0.5,
 	});  
 
@@ -176,7 +164,7 @@ import Video from "../components/Video.astro";
 		end: "1000 center",
 		// markers: true,
 	},
-	opacity:0,
+	opacity:0.2,
 	duration:0.5,
 	}); 
 
@@ -184,11 +172,11 @@ import Video from "../components/Video.astro";
 	scrollTrigger: {
 		scrub: true,
 		trigger: ".manden",
-		start: "250 start",
-		end: "1500 center",
+		start: "0 start",
+		end: "1000 center",
 		// markers: true,
 	},
-	opacity:0,
+	opacity:0.2,
 	duration:0.5,
 	});
 
@@ -206,7 +194,8 @@ import Video from "../components/Video.astro";
 	}
 
 	section {
-		padding-block: 74px;
+		margin-top: 80px;
+		margin-bottom: 80px;
 	}
 
 .manden_bag {
@@ -277,8 +266,8 @@ import Video from "../components/Video.astro";
     border-bottom: 2px solid var(--color-background-stroke);
   }
 
-  .video {
-		padding-top: 74px;
+  .videoen {
+		padding-top: 40px;
   }
 
   .manden_bag h2 {
@@ -289,7 +278,6 @@ import Video from "../components/Video.astro";
     border-top: 2px solid var(--color-background-stroke);
     border-bottom: 2px solid var(--color-background-stroke);
 
-    margin-bottom: 74px;
   }
 
   .manden h2 {
@@ -300,7 +288,6 @@ import Video from "../components/Video.astro";
     border-top: 2px solid var(--color-background-stroke);
     border-bottom: 2px solid var(--color-background-stroke);
 
-    margin-bottom: 74px;
   }
 
   .kontakt h2 {
@@ -311,7 +298,6 @@ import Video from "../components/Video.astro";
     border-top: 2px solid var(--color-background-stroke);
     border-bottom: 2px solid var(--color-background-stroke);
 
-    margin-bottom: 74px;
   }
 
   .blue span {
@@ -344,12 +330,21 @@ import Video from "../components/Video.astro";
 
   @media (max-width:430px) {
 
+    section {
+		margin-top: 60px;
+		margin-bottom: 60px;
+	}
+
     h1{
 		padding-inline: var(--gap4);
 	}
     article{
 		padding-inline: var(--gap4);
 	}
+
+  .videoen {
+		padding-top: 30px;
+  }
 
   .om {
     display: flex;
