--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -1,4 +1,4 @@
-<main>
+<article>
     <div class="accordion">
       <div class="accordion-item">
         <div class="accordion-item-header">
@@ -82,7 +82,7 @@
         </div>
       </div>
     </div>
-  </main>
+  </article>
 
   <script src="../scripts/faq.js"></script>
 
@@ -97,11 +97,10 @@
   box-sizing: border-box;
 }
 
-main {
+article {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: var(--gap11);
 }
 
 span{
@@ -215,11 +214,10 @@ font-size: var(--Body-medium);
 }
 @media (max-width: 450px){
 
-    main {
+    article {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: var(--gap5);
 }
     span{
 font-size: var(--Headline3-small);
