--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -60,7 +60,7 @@ import SocialIcon from "./SocialIcon.astro";
     justify-content: center;
     align-items: center;
     margin-top: 0px;
-    border-top: var(--color-background-stroke) solid 1px; 
+    border-top: var(--color-background-stroke) solid 2px; 
 
   }
 
@@ -92,7 +92,7 @@ import SocialIcon from "./SocialIcon.astro";
     }
 
  .social{
-border-top: var(--color-background-stroke) solid 1px; 
+border-top: var(--color-background-stroke) solid 2px; 
 margin-top: 4rem;
 padding-top: 2rem;
 
@@ -104,18 +104,13 @@ padding-top: 2rem;
     padding-bottom: 5%;
     padding: 1rem 5rem;
     gap: 5rem;
-   
 }
-
 
   .designed {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 0px;
- 
-   
- 
   }
 
   .designed p{
@@ -225,6 +220,10 @@ grid-template-columns: 1fr 1fr;
     }
 }
   @media (max-width: 430px) {
+
+    footer {
+      padding: 2rem 0;
+    }
       .footer {
 padding: 0rem 1.5625rem;
 flex-direction: column;
@@ -233,10 +232,8 @@ align-items: center;
 gap: 5rem;
  display: grid;
 grid-template-columns: 1fr 1fr;
- grid-template-rows: 1fr 1fr 1fr 1fr;
+ grid-template-rows: auto;
       }
-
-      
 
       .col_1 {
         grid-column: span 2;
