--- a/src/components/TestimonialsSlider.astro
+++ b/src/components/TestimonialsSlider.astro
@@ -23,7 +23,7 @@
         position: relative;
         height: 200px;
         overflow: hidden;
-        margin-top: 74px;		
+        margin-top: 40px;		
 
         display: flex;
         align-items: center;
@@ -55,7 +55,7 @@
         cursor: pointer;
         font-size: 35px;
         color: var(--color-text-h3-tertiary);
-        background-color: var(--color-background-button-primary);
+        background-color: var(--color-background-button-secondary);
         z-index: 1;
         padding: 120px;
     }
@@ -82,6 +82,10 @@
     }
 
     @media (max-width: 430px) {
+
+        .carousel {
+            margin-top: 20px;	
+        }
         .carousel .prev, .carousel .next {
         padding-inline: 20px;
     }
