--- a/src/pages/artister.astro
+++ b/src/pages/artister.astro
@@ -39,6 +39,7 @@ import Sti from "../components/Sti.astro";
   </div>
   </article>
 </section>
+<section>
 <article class="artister">
     {data.map((person) => 
     <ArtistCard 
@@ -47,6 +48,7 @@ import Sti from "../components/Sti.astro";
     face={person.facebook} 
     insta={person.instagram}/>)}
 </article>
+</section>
 </MainLayout>
 
 <script>
@@ -66,12 +68,12 @@ mm.add("(min-width: 431px)", () => {
       gsap.from(".artister", {
     scrollTrigger: {
       scrub: true,
-      trigger: ".logo",
+      trigger: ".intro",
       start: "-300 start",
-      end: "800 center",
+      end: "700 center",
       //markers: true,
     },
-    opacity:0,
+    opacity:0.2,
     duration:0.5,
     }); 
   }); 
@@ -86,12 +88,12 @@ mm.add("(min-width: 431px)", () => {
     gsap.from(".artister", {
     scrollTrigger: {
       scrub: true,
-      trigger: ".logo",
+      trigger: ".intro",
       start: "-300 start",
-      end: "800 center",
+      end: "700 center",
       //markers: true,
     },
-    opacity:0,
+    opacity:0.2,
     duration:0.5,
     }); 
   }); 
@@ -105,7 +107,8 @@ mm.add("(min-width: 431px)", () => {
   }
   
   section {
-    padding-block: 74px;
+        margin-top: 80px;
+        margin-bottom: 80px;
     }
 
     .artister {
@@ -114,7 +117,7 @@ mm.add("(min-width: 431px)", () => {
 		column-gap: var(--gap6);
     row-gap: var(--gap7);
 		justify-content: space-between;
-    padding-block: var(--gap7);
+    padding-top: 40px;
 	}
 
   .text {
@@ -160,32 +163,20 @@ mm.add("(min-width: 431px)", () => {
     }
 
     .artist a {
-        background-color: var(--color-background-button-secondary);
+        background-color: var(--color-background-button-primary);
         outline-style: solid;
-        outline-color: var(--color-background-button-secondary-stroke);
+        outline-color: var(--color-background-button-primary-stroke);
         outline-width: 2px;
         color: var(--color-background-button-hover);
     }
 
     .artist a:hover {
         background-color: var(--color-button-primary);
-        color: var(--color-background-button-secondary);
+        color: var(--color-background-button-primary);
         outline-style: solid;
-        outline-color: var(--color-background-button-secondary);
+        outline-color: var(--color-background-button-primary);
         outline-width: 2px;
     }
-
-    /* @media (min-width: 1513px){
-      .artister {
-        column-gap: var(--gap11);
-      }
-}
-
-    @media (max-width: 1450px){
-      .artister {
-        column-gap: var(--gap11);
-      }
-} */
 
     @media (max-width: 1024px) {
       article {
@@ -198,11 +189,18 @@ mm.add("(min-width: 431px)", () => {
 }
 
     @media (max-width: 430px) {
+
+
+      section {
+		margin-top: 60px;
+		margin-bottom: 60px;
+	}
       article {
         padding-inline: var(--gap4);
       }
       .artister {
         column-gap: var(--gap3);
+        padding-top: 20px;
       }
       a {
         font-size: var(--Label-small);
