--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -48,6 +48,26 @@ import Button from "../components/Button.astro";
             </div>
         </article>
     </section>
+    <section class="naaste">
+        <img src="/img/jens_jacob-bred.webp" class="web" alt="">
+        <img src="/img/jens_jacob.webp" class="phone" alt="">
+        <div class="tekst">
+        <h2>Jens Jacob Tychsen</h2>
+        <p>Bag om</p>
+        <p><span>Badehotellet</span></p>
+        <div class="button">
+            <div class="large">
+                <Button size="lg" link="/events" variant="primary">Læs mere</Button>
+            </div>
+            <div class="medium">
+                <Button size="me" link="/events" variant="primary">Læs mere</Button>
+            </div>
+            <div class="small">
+                <Button size="sm" link="/events" variant="primary">Læs mere</Button>
+            </div>
+        </div>
+        </div>
+    </section>
     <section class="juni">
     <div id="animated-text-strip">
         <span class="marquee">Juni 2024 <span class="circle"></span> Juni 2024 <span class="circle"></span> Juni 2024 <span class="circle"></span> Juni 2024 <span class="circle"></span>&nbsp;</span>
@@ -130,15 +150,27 @@ mm.add("(min-width: 431px)", () => {
 	
 	gsap.registerPlugin(ScrollTrigger);
 
+    gsap.from(".naaste", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".intro",
+		start: "-300 start",
+		end: "800 center",
+		//markers: true,
+	},
+    opacity:0.2,
+	duration:0.5,
+	});
+
     gsap.from(".juni", {
 	scrollTrigger: {
 		scrub: true,
-		trigger: ".logo",
-		start: "-300 start",
-		end: "1000 center",
+		trigger: ".naaste",
+		start: "-100 start",
+		end: "900 center",
 		//markers: true,
 	},
-    opacity:0,
+    opacity:0.2,
 	duration:0.5,
 	}); 
 
@@ -146,24 +178,24 @@ mm.add("(min-width: 431px)", () => {
     gsap.from(".juli", {
 	scrollTrigger: {
 		scrub: true,
-		trigger: ".artister",
-		start: "-100 start",
-		end: "1000 center",
+		trigger: ".juni",
+		start: "0 start",
+		end: "1100 center",
 		//markers: true,
 	},
-    opacity:0,
+    opacity:0.2,
 	duration:0.5,
 	}); 
 
     gsap.from(".august", {
 	scrollTrigger: {
 		scrub: true,
-		trigger: "#animated-text-strip-reverse",
-		start: "-100 start",
+		trigger: ".juli",
+		start: "0 start",
 		end: "1000 center",
 		//markers: true,
 	},
-    opacity:0,
+    opacity:0.2,
 	duration:0.5,
 	}); 
 	
@@ -176,16 +208,28 @@ mm.add("(min-width: 431px)", () => {
   sm.add("(max-width: 430px)", () => {
 	
 	gsap.registerPlugin(ScrollTrigger);
+
+    gsap.from(".naaste", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".intro",
+		start: "-300 start",
+		end: "800 center",
+		//markers: true,
+	},
+    opacity:0.2,
+	duration:0.5,
+	});
 	
     gsap.from(".juni", {
 	scrollTrigger: {
 		scrub: true,
-		trigger: ".logo",
+		trigger: ".naaste",
 		start: "-100 start",
-		end: "1000 center",
+		end: "900 center",
 		//markers: true,
 	},
-    opacity:0,
+    opacity:0.2,
 	duration:0.5,
 	}); 
 
@@ -193,24 +237,24 @@ mm.add("(min-width: 431px)", () => {
     gsap.from(".juli", {
 	scrollTrigger: {
 		scrub: true,
-		trigger: ".artister",
+		trigger: ".juni",
 		start: "-100 start",
 		end: "1000 center",
 		//markers: true,
 	},
-    opacity:0,
+    opacity:0.2,
 	duration:0.5,
 	}); 
 
     gsap.from(".august", {
 	scrollTrigger: {
 		scrub: true,
-		trigger: "#animated-text-strip-reverse",
-		start: "-300 start",
+		trigger: ".juli",
+		start: "-100 start",
 		end: "1000 center",
 		//markers: true,
 	},
-    opacity:0,
+    opacity:0.2,
 	duration:0.5,
 	}); 
 	
@@ -224,7 +268,8 @@ mm.add("(min-width: 431px)", () => {
     }
 
     section {
-        padding-block: 74px;
+        margin-top: 80px;
+        margin-bottom: 80px;
     }
 
     a {
@@ -257,19 +302,62 @@ mm.add("(min-width: 431px)", () => {
     }
 
     .kommende a {
-        background-color: var(--color-background-button-secondary);
+        background-color: var(--color-background-button-primary);
         outline-style: solid;
-        outline-color: var(--color-background-button-secondary-stroke);
+        outline-color: var(--color-background-button-primary-stroke);
         outline-width: 2px;
         color: var(--color-background-button-hover);
     }
 
     .kommende a:hover {
         background-color: var(--color-button-primary);
-        color: var(--color-background-button-secondary);
+        color: var(--color-background-button-primary);
         outline-style: solid;
-        outline-color: var(--color-background-button-secondary);
+        outline-color: var(--color-background-button-primary-stroke);
         outline-width: 2px;
+    }
+
+    .phone {
+        display: none;
+    }
+
+    .naaste {
+        position: relative;
+        text-align: center;
+    }
+
+    .tekst {
+        position: absolute;
+        top: 50%;
+        left: 25%;
+        transform: translate(-50%, -50%);
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
+    }
+
+    .tekst > * {
+        color: var(--color-button-primary);
+    }
+
+    .tekst span {
+        font-size: var(--Headline2-large);
+        font-weight: 900;
+    }
+
+    .tekst p {
+        font-size: var(--Headline3-large);
+        font-weight: 700;
+    }
+
+    .button {
+        padding-top: 2rem;
+    }
+
+    .medium, .small {
+        display: none;
     }
 
     .text {
@@ -361,7 +449,7 @@ mm.add("(min-width: 431px)", () => {
 		column-gap: var(--gap6);
         row-gap: var(--gap7);
 		justify-content: flex-start;
-        padding-block: var(--gap7);
+        padding-top: 40px;
 	}
 
     @media (max-width: 1024px){
@@ -384,14 +472,42 @@ mm.add("(min-width: 431px)", () => {
         width: var(--gap3);
         height: var(--gap3);
     }
+
+    .tekst span {
+        font-size: var(--Headline2-medium);
+        font-weight: 900;
+    }
+
+    .tekst p {
+        font-size: var(--Headline3-medium);
+        font-weight: 700;
+    }
+
+    .button {
+        padding-top: 0.7rem;
+    }
+
+    .large {
+        display: none;
+    }
+
+    .medium {
+        display: flex;
+    }
 }
     @media (max-width: 430px){
+
+        section {
+		margin-top: 60px;
+		margin-bottom: 60px;
+	}
     .artister{
         overflow: auto;
         flex-wrap: nowrap;
         white-space: nowrap;
         width:100%;
         margin-inline: auto;
+        padding-top: 20px;
     } 
 
     article {
@@ -412,6 +528,39 @@ mm.add("(min-width: 431px)", () => {
     .circle {
         width: var(--gap2);
         height: var(--gap2);
+    }
+
+    .web {
+        display: none;
+    }
+
+    .phone {
+        display: flex;
+    }
+
+    .tekst {
+        position: absolute;
+        top: 60%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .tekst > * {
+        color: var(--color-button-primary);
+    }
+
+    .tekst span {
+        font-size: var(--Headline2-small);
+        font-weight: 900;
+    }
+
+    .tekst p {
+        font-size: var(--Headline3-small);
+        font-weight: 700;
+    }
+
+    .button {
+        padding-top: 2rem;
     }
 }
    
