--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,7 +12,7 @@ import Video from "../components/Video.astro";
     </section>
 <section class="manden_bag">
     <article class="om">
-        <img src="/img/torsten-frame.webp" alt="">
+        <img src="/img/torsten-frame.webp" alt="Et billede af ejeren af Kanonproduktion Torsten Gutterman">
          <div class="line"></div>
             <div class="om_tekst">
                 <div class="citat2">
