--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -28,7 +28,7 @@ import Button from "../components/Button.astro";
         <Button size="sm" link="/kontakt" variant="secondary">Læs mere</Button>
         </div>
   </div>
-  <img src="/img/instrumenter-frame.webp" alt="">
+  <img src="/img/instrumenter-frame.webp" alt="Instrumenter fra en koncert">
   </article>
 </section>
 <section class="faq">
