--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Video from "../components/Video.astro";
 import Button from "../components/Button.astro";
 ---
 
-<MainLayout title="Forside">
+<MainLayout title="Kanonproduktion: booking, promoting og events">
 <section class="hero">
 	<Video/>
 </section>
@@ -35,6 +35,7 @@ import Button from "../components/Button.astro";
 		{filterJuni.map((person) => 
             <EventCard 
                 image={`/img/${person.image}`} 
+                alt={`${person.alt}`} 
                 status={person.status}
                 name={person.name} 
                 price={person.price} 
@@ -90,7 +91,7 @@ import Button from "../components/Button.astro";
 		<div class="testimonial">
 			<div class="stars">
 				<img src="/img/star_1.svg" alt="">
-			<img src="/img/star_1.svg" alt="">
+			<img src="/img/star_1.svg" alt="Stjerne fra testimonials">
 			<img src="/img/star_1.svg" alt="">
 			<img src="/img/star_1.svg" alt="">
 		</div>
