--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -1,1 +1,8 @@
 <video autoplay muted loop src="/img/kanonproduktion_video.mp4" width="100%" height="auto" autoplay></video>
+
+
+<style>
+    video{
+        object-fit: cover;
+    }
+</style>
