video final forhåbeligt

--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -44,4 +44,18 @@
             display: grid;
         }
     }
+
+    @media (max-width: 1024px){
+        .hero-video_video {
+            height: auto;
+        }
+
+        .hero-video {
+            height: auto;
+        }
+
+        video {
+            height: auto;
+        }
+    }
 </style>
