--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,10 +19,10 @@ import SocialIcon from "./SocialIcon.astro";
     </div>
     <div class="col_3">
         <h4>Generelt</h4>
-       <a href="#">Om os</a>
-       <a href="#">Kontakt</a>
-       <a href="#">FAQ</a>
-       <a href="#">Program</a>
+       <a href="/about">Om os</a>
+       <a href="/kontakt">Kontakt</a>
+       <a href="/booking#jump">FAQ</a>
+       <a href="/events">Program</a>
     </div>
 
     <div class="col_4">
