--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -12,7 +12,7 @@ import Button from "../components/Button.astro";
   </article>
   <article class="om">
   <div class="indhold">
-    <div class="tekst">
+    <div class="tekst" >
     <h2>Skal vi stå for din næste optræden?</h2>
     <p>Hos Kanonproduktion stræber vi efter at du får den bedste oplevelse, derfor behøver du ikke løfte en finger, du skal bare komme og gøre det du gør bedst - så gør vi nemlig det samme ;)
       Vi tager personligt hånd om alt - fra planlægning og koordinering til udførelse.
@@ -21,7 +21,7 @@ import Button from "../components/Button.astro";
       <br>
       Lad os gøre jeres næste arrangement til en uforglemmelig oplevelse!</p>
       </div>
-      <div class="button large">
+      <div class="button large" id="jump">
       <Button size="lg" link="/kontakt" variant="secondary">Læs mere</Button>
       </div>
       <div class="button small">
