--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -1,6 +1,6 @@
 ---
 //Lav variablen "url" med vores URL fra supabase
-const url = "https://muqgfdguddfkghqhbdai.supabase.co/rest/v1/kanonproduktion_events?tags";
+const url = "https://muqgfdguddfkghqhbdai.supabase.co/rest/v1/kanonproduktion_events?order=date";
 
 //Lav variablen "api" med vores api nøgle
 const api = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im11cWdmZGd1ZGRma2docWhiZGFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTQ3NTI1MjcsImV4cCI6MjAzMDMyODUyN30.V1cmTeBITytZYDHSYEemvpkdSObU40QtSWsIqANjXBY";
@@ -157,8 +157,8 @@ mm.add("(min-width: 431px)", () => {
 	scrollTrigger: {
 		scrub: true,
 		trigger: ".intro",
-		start: "-300 start",
-		end: "800 center",
+		start: "-400 start",
+		end: "570 center",
 		//markers: true,
 	},
     opacity:0.2,
