--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
   </head>
 
   <body data-title={title}>
-    <Header />
+    <Header title={title} />
     <main>
       <slot />
     </main>
