--- a/src/components/KontaktFormular.astro
+++ b/src/components/KontaktFormular.astro
@@ -106,6 +106,7 @@ button[type=submit] {
     color: var(--color-button-primary);
     border: none;
     display: flex;
+    cursor: pointer;
     padding: var(--spacing-vertical-button-lg) var(--spacing-horizontal-button-lg);
     justify-content: center;
     align-items: center;
