--- a/src/components/KontaktFormular.astro
+++ b/src/components/KontaktFormular.astro
@@ -27,7 +27,7 @@ import Button from "./Button.astro"
     
             <div class="telefon">
                 <label for="telefon">Telefon <span class="req">*</span></label>
-                <input type="tel" id="telefon" name="telefon" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" placeholder="12 23 45 67" required>
+                <input type="tel" id="telefon" name="telefon" pattern="[0-9]{2}[0-9]{2}[0-9]{2}[0-9]{2}" placeholder="12234567" required>
             </div>
         </div>
     
