--- a/src/components/KontaktFormular.astro
+++ b/src/components/KontaktFormular.astro
@@ -4,8 +4,8 @@ import Button from "./Button.astro"
 ---
 <div class="container">
     <div class="form">
-    <form action="contact_form" name="contact_form" method="POST" data-netlify="true" netlify-honeypot="bot-field">
-        <input type="hidden" name="form-name" value="contact_form">
+    <form action="contact_form" name="contact_form" method="post" data-netlify="true" netlify-honeypot="bot-field">
+        <input type="hidden" name="contact_form" value="contact_form">
 
         <div class="flex">
             <div class="firma">
